# pyMocoKit

./: .gitignore  CITATION.cff  LICENSE  README.md  __env.yml  environment.yml  pyproject.toml  requirements-gpu.txt
docs/: _config.yml  index.md
mocokit/: __init__.py  cli.py  coils.py  data_io.py  gridding.py  ipat.py  logconfig.py  modified_mdgrappa.py  motion.py  mtypes.py  pf_handling.py  recon.py  runtime.py  utils.py
mocokit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_import.py
